# picca-ai-prototype

./: .gitignore  Dockerfile.gateway  README.md  compose.yaml  compose.yml  debug-web.Dockerfile  gateway.Dockerfile  go.work  go.work.sum  model-cuda.Dockerfile  model.Dockerfile  pyproject.toml
.agent/skills/dmmf/: SKILL.md
.agent/skills/general-coding-style/: SKILL.md
.agent/skills/git-workflow/: SKILL.md
.github/workflows/: publish-docker-images.yml  publish-model-artifact.yml
debug-web/: go.mod  go.sum
debug-web/cmd/debug-web/: main.go
debug-web/internal/app/: app.go
debug-web/internal/config/: config.go
debug-web/internal/queue/: messages.go  rabbitmq.go  rabbitmq_test.go
debug-web/internal/s3client/: client.go
debug-web/internal/search/: client.go  client_test.go
debug-web/internal/storage/: sqlite.go  sqlite_test.go
debug-web/internal/web/: handlers.go  handlers_test.go
docker/seaweedfs/: s3.json
docs/: architecture.md
docs/superpowers/plans/: 2026-05-20-debug-web-application.md  (+4 more)
scripts/: build_manifest_sources.py  ingest_images.py  prepare_models.py  publish_directory_to_queue.py  run_caption_service.py  run_dense_service.py  run_gateway.py  run_ocr_service.py  run_sparse_service.py  search_api_client.py  search_images.py
scripts/artifactor/: go.mod
scripts/push_models_oci/: go.mod  main.go  main_test.go
src/picca_search/: __init__.py  application.py  domain.py
tests/: test_dependency_constraints.py  test_embedding_models.py  test_gateway_result_events.py  test_gateway_search_breakdown.py  test_gateway_sts_config.py  test_onnxruntime_cuda_runtime.py  test_prepare_models.py  test_qdrant_index.py  test_scripts.py  test_sparse_onnx_validation.py  test_vision_language_models.py  test_weighted_multivector_search.py
(+25 files in other folders)
