[project]
name = "picca-ai-prototype"
version = "0.1.0"
description = "Prototype natural language image search with Qdrant"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fugashi>=1.5.2",
    "pillow>=10.0.0",
    "qdrant-client>=1.14.0",
    "timm>=1.0.27",
    "torch>=2.3.0",
    "transformers>=4.45.0,<5",
    "unidic-lite>=1.0.8",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
vision = [
    "paddlepaddle>=3.3.1",
    "paddleocr[doc-parser]>=3.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/picca_search"]
