[project]
name = "picca-ai-prototype"
version = "0.1.0"
description = "Prototype natural language image search with Qdrant"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "boto3>=1.35.0",
    "fastapi>=0.115.0",
    "fugashi>=1.5.2",
    "httpx>=0.27.0",
    "pika>=1.3.2",
    "pillow>=10.0.0",
    "pydantic>=2.8.0",
    "python-multipart>=0.0.9",
    "qdrant-client>=1.14.0",
    "optimum[onnxruntime]",
    "timm>=1.0.27",
    "torch>=2.3.0",
    "transformers>=4.45.0,<5",
    "unidic-lite>=1.0.8",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
vision = [
    "paddlepaddle>=3.3.1",
    "paddleocr[doc-parser]>=3.3.0",
    "paddle2onnx>=2.1.0",
    "pip",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/picca_search"]
